Fix horizontal overflow on chat component

--- a/components/Chat/Chat.module.scss
+++ b/components/Chat/Chat.module.scss
@@ -1,6 +1,5 @@
 .base {
   height: 100%;
-  width: 100%;
   background-color: aliceblue;
   color: #222;
   padding: 1rem;
